# oracle-vm

./: .babelrc  .gitignore  CHANGELOG.md  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.typecheck.json  webpack.config.js
.github/workflows/: node.js.yml
examples/simple-url-call/: Cargo.toml
examples/simple-url-call/scripts/: build.sh
examples/simple-url-call/src/: main.rs
examples/simple-url-call/src/flux/: mod.rs  raw.rs
src/: Process.ts  Process.worker.ts  ProcessMethods.ts  main.test.ts  main.ts
src/core/: OpcodeExecutor.ts
src/core/models/: Code.ts  Context.ts  ExecuteResult.ts  Memory.ts  Opcode.ts
src/core/opcodes/: add.test.ts  add.ts  div.test.ts  div.ts  env.test.ts  env.ts  fetch.ts  find.test.ts  find.ts  index.ts  jump.test.ts  jump.ts  jumpdest.ts  jumpi.test.ts  jumpi.ts  mod.ts  mul.ts  parse.test.ts  parse.ts  return.ts  sub.test.ts  sub.ts  var.test.ts  var.ts
src/core/services/: MemoryService.test.ts  MemoryService.ts  TypeService.test.ts  TypeService.ts
src/core/utils/: assertUtils.test.ts  assertUtils.ts  classUtils.ts  (+1 more)
src/models/: Cache.ts  Context.ts  ExecuteResult.ts  InMemoryCache.ts  WorkerMessage.ts
src/services/: AssertsService.ts  CallService.ts  CryptoService.test.ts  CryptoService.ts  EnvironmentService.ts  HexService.ts  JsonService.ts  VirtualFsService.ts  VirtualMachineService.ts  WasmImports.ts  WasmService.ts  WorkerService.ts
test/: array.test.ts  oracle.test.ts  priceFeed.test.ts  vm.test.ts
test/jobs/: allOpcodes.js  priceLookup.json
test/wasm/: basic-fetch.wasm
(+10 files in other folders)
